--- a/parser.ipynb
+++ b/parser.ipynb
@@ -871,6 +871,43 @@
     "lalr = pd.read_csv('lalr.csv')\n",
     "lalr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['KEYWD_DEF',\n",
+       " 'IDENTIFIER',\n",
+       " 'SYM_B1',\n",
+       " 'SYM_B2',\n",
+       " 'OP_FUNC',\n",
+       " 'KEYWD_INT',\n",
+       " 'SYM_P1',\n",
+       " 'IDENTIFIER',\n",
+       " 'SYM_B1',\n",
+       " 'STR_LIT',\n",
+       " 'SYM_B2',\n",
+       " 'SYM_SEMICOLON',\n",
+       " 'KEYWD_RETURN',\n",
+       " 'INT_LIT',\n",
+       " 'SYM_SEMICOLON',\n",
+       " 'SYM_P2']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"toks.txt\", \"r\")\n",
+    "tok_list = f.read().split()\n",
+    "tok_list"
+   ]
   }
  ],
  "metadata": {
