--- a/parser.ipynb
+++ b/parser.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -490,13 +490,140 @@
        "[106 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "grammar = pd.read_csv('rules.csv')\n",
+    "grammar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(106):\n",
+    "    grammar.iloc[i,1] =  grammar.iloc[i,1].split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LHS</th>\n",
+       "      <th>RHS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>START</td>\n",
+       "      <td>[PROGRAM]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PROGRAM</td>\n",
+       "      <td>[DECL, PROGRAM]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PROGRAM</td>\n",
+       "      <td>[FUNCTION, PROGRAM]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PROGRAM</td>\n",
+       "      <td>['']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>STMTS</td>\n",
+       "      <td>[STMT, STMTS]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>PREFIX</td>\n",
+       "      <td>[OP_INCR]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>PREFIX</td>\n",
+       "      <td>[OP_DECR]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>PREFIX</td>\n",
+       "      <td>[OP_BIT4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>PREFIX</td>\n",
+       "      <td>[OP_AR_add]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>PREFIX</td>\n",
+       "      <td>[OP_AR_sub]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>106 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         LHS                   RHS\n",
+       "0      START             [PROGRAM]\n",
+       "1    PROGRAM       [DECL, PROGRAM]\n",
+       "2    PROGRAM   [FUNCTION, PROGRAM]\n",
+       "3    PROGRAM                  ['']\n",
+       "4      STMTS         [STMT, STMTS]\n",
+       "..        ...                  ...\n",
+       "101   PREFIX             [OP_INCR]\n",
+       "102   PREFIX             [OP_DECR]\n",
+       "103   PREFIX             [OP_BIT4]\n",
+       "104   PREFIX           [OP_AR_add]\n",
+       "105    PREFIX          [OP_AR_sub]\n",
+       "\n",
+       "[106 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "grammar"
    ]
   },
