--- a/parser.ipynb
+++ b/parser.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "[106 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,17 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(106):\n",
-    "    grammar.iloc[i,1] =  grammar.iloc[i,1].split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -618,18 +608,20 @@
        "[106 rows x 2 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "for i in range(106):\n",
+    "    grammar.iloc[i,1] =  grammar.iloc[i,1].split()\n",
     "grammar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +981,7 @@
        "[192 rows x 70 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
